# twigo

./: .gitignore  .npmrc  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  cliff.toml  docker-compose.yml  eslint.config.js  nats.conf  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
apps/twigo/: index.html  package.json  tsconfig.json  vite.config.ts
apps/twigo/scripts/: set-version.mjs  (+1 more)
apps/twigo/src-tauri/: Cargo.toml  tauri.conf.json
apps/twigo/src-tauri/capabilities/: default.json
apps/twigo/src-tauri/icons/: icon.icns
apps/twigo/src-tauri/src/: lib.rs  main.rs
apps/twigo/src-tauri/src/nats/: connection.rs  context.rs  error.rs  jetstream.rs  kv.rs  mod.rs  monitoring.rs  obj.rs  publish.rs  service.rs  subjects.rs  subscription.rs
apps/twigo/src-tauri/tests/fixtures/: connz.json  healthz.json  jsz.json  varz.json
branding/: README.md
libs/ui/: package.json  tsconfig.json
libs/utils/: package.json  tsconfig.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/lib/: api.ts  editor.test.ts  editor.ts  message.test.ts  message.ts  mock.ts  persist-storage.test.ts  persist-storage.ts  utils.test.ts
src/store/: connections.ts  settings.ts  stream.test.ts  stream.ts  subjects.ts  ui.ts  workspace.ts
src/test/: setup.ts
(+254 files in other folders)
