[package]
name = "twigo"
version = "0.1.0"
description = "Twigo - a NATS IDE"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "twigo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = { version = "0.49.1", features = ["object-store"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "io-util",
] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
futures-util = "0.3.32"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tauri-plugin-store = "2.4.3"
time = { version = "0.3", features = ["formatting"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-process = "2"

# The updater is desktop-only.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.27.0"

